# unicode-segmentation-etna

./: .gitignore  BUGS.md  Cargo.toml  TASKS.md  etna.toml  steps.json
patches/: ascii_word_bound_drop_apostrophe_af87c8d_1.patch  grapheme_next_boundary_unwrap_0f55f70_1.patch  grapheme_prev_boundary_chunk_start_fb5d7b6_1.patch
src/: etna.rs  grapheme.rs  lib.rs  word.rs
tests/: etna_witnesses.rs  test.rs
