[package]

name = "unicode-segmentation"
version = "1.13.2"
authors = ["kwantam <kwantam@gmail.com>", "Manish Goregaokar <manishsmail@gmail.com>"]

edition = "2018"
homepage = "https://github.com/unicode-rs/unicode-segmentation"
repository = "https://github.com/unicode-rs/unicode-segmentation"

license = "MIT OR Apache-2.0"
keywords = ["text", "unicode", "grapheme", "word", "boundary"]
readme = "README.md"
description = """
This crate provides Grapheme Cluster, Word and Sentence boundaries
according to Unicode Standard Annex #29 rules.
"""
rust-version = "1.85.0"

include = [
    "COPYRIGHT",
    "LICENSE-MIT",
    "LICENSE-APACHE",
    "Cargo.toml",
    "src/**/*.rs",
    "README.md",
    "tests/**/*.rs",
    "benches/**/*.rs",
]

[features]
no_std = [] # This is a no-op, preserved for backward compatibility only.
etna = []  # enables the std-dependent ETNA property module and the `etna` bin
default = ["etna"]

[dependencies]
proptest   = { version = "1.7.0" }
quickcheck = { git = "https://github.com/alpaylan/quickcheck.git", branch = "master", features = ["etna"] }
crabcheck  = { git = "https://github.com/alpaylan/crabcheck.git", branch = "main" }
hegeltest  = "0.3.7"

[dev-dependencies]
quickcheck_macros = { git = "https://github.com/alpaylan/quickcheck.git", branch = "master" }
criterion = "0.5"

[[bench]]
name = "chars"
harness = false

[[bench]]
name = "words"
harness = false

[[bench]]
name = "word_bounds"
harness = false

[[bench]]
name = "unicode_word_indices"
harness = false

[[bin]]
name = "etna"
path = "src/bin/etna.rs"
required-features = ["etna"]
